# denops-rust-example

./: Cargo.toml  LICENSE_MIT  README.md
deno/: test.ts
denops/rust/: mod.ts
src/: lib.rs  wasm.rs
src/wasm/: console.rs
utils/denops-builder/: Cargo.toml
utils/denops-builder/src/: main.rs
